--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -262,6 +262,26 @@
 		font-weight: bold;
 	  }
 
+	  .ter {
+		color: $color-terran;
+	  }
+
+	  .cat {
+		color: $color-cathaar;
+	  }
+
+	  .xan {
+		color: $color-xandathrii;
+	  }
+
+	  .zik {
+		color: $color-zikonian;
+	  }
+
+	  .etd {
+		color: $color-eitraides;
+	  }
+
 	  a,
 	  .tablesort_asc,
 	  .tablesort_desc {
