--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -250,9 +250,9 @@ option {
     }
   }
 
-  img {
-    display: none !important;
-  }
+  //img {
+  //  display: none !important;
+  //}
 
   &:after {
     position: absolute;
