--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -118,6 +118,9 @@
     flex-basis: 100%;
     flex-shrink: 0;
     color: $color-offwhite;
+	font-family: "VT323", monospace;
+	font-size: 1.4rem;
+	letter-spacing: 1px;
 
     span {
       flex-basis: 100%;
