--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -139,6 +139,7 @@
 		  padding: .5rem .125rem;
 		  //display: flex;
 		  //align-items: center;
+		  font-family: $font-retro;
 
 		  &.right {
 			padding-right: .25rem;
