--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -49,3 +49,6 @@ $color-mod: #00b500;
 //
 $color-progress-completed: #378059;
 $color-progress-expected: rgba(#FAC05E, .4);
+
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+$font-retro: 'VT323', monospace;
