--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -8,9 +8,9 @@
   border: none;
   width: auto;
   @include respond-below(sm) {
-    grid-row: 3/3;
-    grid-column: 2 / 2;
-    max-width: calc(100vw - 114px);
+	grid-row: 3/3;
+	grid-column: 2 / 2;
+	max-width: calc(100vw - 114px);
   }
 }
 
@@ -46,10 +46,10 @@
   transition: ease all 0.3s;
 
   &:hover {
-    text-decoration: none;
-    background: $color-primary;
-    color: black;
-    opacity: 1;
+	text-decoration: none;
+	background: $color-primary;
+	color: black;
+	opacity: 1;
   }
 }
 
@@ -59,20 +59,22 @@ h2 {
   padding: .5rem 0;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 1.2rem;
   color: $color-offwhite;
   background: $color-borders;
   background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
   border-image-slice: 1;
+  font-family: "VT323", monospace;
+  font-size: 1.4rem;
+  letter-spacing: 1px;
 
   &:empty {
-    display: none;
+	display: none;
   }
 
   a:hover {
-    color: rgba($color-primary, .8);
+	color: rgba($color-primary, .8);
   }
 }
 
@@ -87,43 +89,43 @@ h2 {
 
   .header,
   .footer {
-    display: none;
+	display: none;
   }
 
   .maintext {
-    text-align: center;
-    padding: 0;
-    font-size: .9rem;
+	text-align: center;
+	padding: 0;
+	font-size: .9rem;
 
-    a {
-      font-weight: normal;
+	a {
+	  font-weight: normal;
 
-      &.notice_warning {
-        color: white;
-        opacity: 0.75;
+	  &.notice_warning {
+		color: white;
+		opacity: 0.75;
 		font-size: $text-smaller;
-      }
-    }
+	  }
+	}
 
-    > br {
-      &:last-child {
-        display: none;
-      }
-    }
+	> br {
+	  &:last-child {
+		display: none;
+	  }
+	}
   }
 }
 
 .maintext {
   p + p {
-    margin-top: .5rem;
+	margin-top: .5rem;
   }
 
   table {
-    margin: 0 auto 1rem;
+	margin: 0 auto 1rem;
 
-    table {
-      background: $color-borders;
-    }
+	table {
+	  background: $color-borders;
+	}
   }
 }
 
@@ -177,28 +179,28 @@ span.center {
   padding: .5rem;
 
   h2 {
-    background: none;
-    margin: 0 0 .5rem;
-    padding: 0;
-    font-size: 1rem;
+	background: none;
+	margin: 0 0 .5rem;
+	padding: 0;
+	font-size: 1rem;
   }
 
   th,
   td,
   p {
-    color: $color-offwhite;
+	color: $color-offwhite;
 
-    b {
-      font-weight: normal;
-      font-size: $text-small;
-    }
+	b {
+	  font-weight: normal;
+	  font-size: $text-small;
+	}
   }
 
   table {
-    + table,
-    + p {
-      margin-top: 1rem;
-    }
+	+ table,
+	+ p {
+	  margin-top: 1rem;
+	}
   }
 }
 
@@ -211,22 +213,22 @@ span.center {
 
 #tab_links {
   li {
-    padding: 0;
+	padding: 0;
 
-    + li {
-      margin-left: 1rem;
-    }
+	+ li {
+	  margin-left: 1rem;
+	}
   }
 
   .tab_link_active {
-    color: lighten($color-borders, 90%);
-    cursor: default;
+	color: lighten($color-borders, 90%);
+	cursor: default;
 
-    &:hover {
-      background: none;
-      text-decoration: none;
-      color: lighten($color-borders, 70%);
-    }
+	&:hover {
+	  background: none;
+	  text-decoration: none;
+	  color: lighten($color-borders, 70%);
+	}
   }
 }
 
@@ -234,10 +236,10 @@ span.center {
   padding: .25rem .5rem;
 
   &:hover {
-    color: $color-black;
-    background: $color-primary;
-    //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-    text-decoration: none;
+	color: $color-black;
+	background: $color-primary;
+	//background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+	text-decoration: none;
   }
 }
 
