--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -124,15 +124,15 @@ option {
   grid-template-rows: auto 1fr 1rem;
   grid-column-gap: .5rem;
   @include respond-below(sm) {
-    grid-template-columns: 100px auto;
-    grid-template-rows: 165px auto auto;
-    grid-row-gap: 0;
-    padding: 0;
-    max-width: 100vw;
+	grid-template-columns: 100px auto;
+	grid-template-rows: 165px auto auto;
+	grid-row-gap: 0;
+	padding: 0;
+	max-width: 100vw;
   }
 
   .maintext {
-    padding-right: 0;
+	padding-right: 0;
   }
 }
 
@@ -150,84 +150,83 @@ option {
 }
 
 
-
 #message_form {
   width: 60rem;
   max-width: 100%;
   margin: 0 auto;
 
   p {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-wrap: wrap;
 
-    &:nth-child(1) {
-      display: flex;
-      justify-content: center;
-    }
+	&:nth-child(1) {
+	  display: flex;
+	  justify-content: center;
+	}
 
-    &:nth-child(2),
-    &:nth-child(3) {
-      display: flex;
-      justify-content: space-between;
-    }
+	&:nth-child(2),
+	&:nth-child(3) {
+	  display: flex;
+	  justify-content: space-between;
+	}
 
-    #to {
-      display: inline-block;
-      margin-left: 4rem;
-    }
+	#to {
+	  display: inline-block;
+	  margin-left: 4rem;
+	}
 
-    #subject {
-      display: inline-block;
-      margin-left: 1.7rem;
-      width: calc(100% - 6rem);
-    }
+	#subject {
+	  display: inline-block;
+	  margin-left: 1.7rem;
+	  width: calc(100% - 6rem);
+	}
 
-    #message_body {
-      display: inline-block;
-      vertical-align: -14rem;
-      width: calc(100% - 6rem) !important;
-      margin-left: 1.1rem;
-      height: 15rem;
-    }
+	#message_body {
+	  display: inline-block;
+	  vertical-align: -14rem;
+	  width: calc(100% - 6rem) !important;
+	  margin-left: 1.1rem;
+	  height: 15rem;
+	}
 
-    #charsleft {
-      display: block;
-      text-align: center !important;
-      margin: 0 auto;
-      width: 100%;
-      font-size: $text-small;
-    }
+	#charsleft {
+	  display: block;
+	  text-align: center !important;
+	  margin: 0 auto;
+	  width: 100%;
+	  font-size: $text-small;
+	}
 
-    input[type="submit"] {
-      margin: 0 auto;
-    }
+	input[type="submit"] {
+	  margin: 0 auto;
+	}
   }
 
 
   br {
-    display: none;
+	display: none;
   }
 
   + p {
-    font-size: $text-small;
+	font-size: $text-small;
   }
 }
 
 #page_messages #tab1 .container {
   &:nth-child(2) .header::before {
-    content: 'Send recall message';
+	content: 'Send recall message';
   }
 
   &:nth-child(3) {
-    .header::before {
-      content: 'Messages';
-    }
+	.header::before {
+	  content: 'Messages';
+	}
 
-    table th {
-      text-transform: initial;
-    }
+	table th {
+	  text-transform: initial;
+	}
   }
 }
 
@@ -235,19 +234,26 @@ option {
   color: $color-primary;
 }
 
+.mail_unread,
+.mail_read {
+  img {
+	display: none;
+  }
+}
+
 #page_messages {
   a[onclick^="read"],
   a[onclick^="reply"],
   a[href*='action=delete'],
   a[href*='action=report'] {
-    display: inline-block;
-    position: relative;
-    width: 1.5rem;
-    height: 1.5rem;
+	display: inline-block;
+	position: relative;
+	width: 1.5rem;
+	height: 1.5rem;
 
-    &:after {
-      font-size: 1.3rem;
-    }
+	&:after {
+	  font-size: 1.3rem;
+	}
   }
 
   //img {
@@ -255,32 +261,32 @@ option {
   //}
 
   &:after {
-    position: absolute;
-    top: 0;
-    left: 1px;
-    color: $color-zikonian;
-    font-size: 1.25rem;
-    line-height: 1.5rem;
+	position: absolute;
+	top: 0;
+	left: 1px;
+	color: $color-zikonian;
+	font-size: 1.25rem;
+	line-height: 1.5rem;
   }
 
   a[onclick^="read"]::after {
-    content: '\2709';
-    color: $color-text;
+	content: '\2709';
+	color: $color-text;
   }
 
   a[onclick^="reply"]::after {
-    content: '\21a9';
-    color: $color-text;
+	content: '\21a9';
+	color: $color-text;
   }
 
   a[href*='action=report']::after {
-    content: '\26a0';
-    color: $color-neutral;
+	content: '\26a0';
+	color: $color-neutral;
   }
 
   a[href*='action=delete']::after {
-    content: '\2716';
-    color: $color-zikonian;
+	content: '\2716';
+	color: $color-zikonian;
   }
 }
 
@@ -290,43 +296,43 @@ option {
 
 #alliance_menu {
   a {
-    display: inline-block;
-    margin: .5rem 0;
-    padding: .25rem .5rem;
-    color: $color-primary;
-    //border: 1px solid $color-primary;
-    cursor: pointer;
-    font-weight: bold;
-    transition: .3s;
+	display: inline-block;
+	margin: .5rem 0;
+	padding: .25rem .5rem;
+	color: $color-primary;
+	//border: 1px solid $color-primary;
+	cursor: pointer;
+	font-weight: bold;
+	transition: .3s;
 
-    &:hover {
-      text-decoration: none;
-      border: none;
-      color: black;
-      background: $color-primary;
-      //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-    }
+	&:hover {
+	  text-decoration: none;
+	  border: none;
+	  color: black;
+	  background: $color-primary;
+	  //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+	}
   }
 }
 
 .important_message {
   .title {
-    display: block;
-    padding: .5rem;
-    font-size: 1rem;
-    background: $color-borders;
-    color: $color-text;
-    //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+	display: block;
+	padding: .5rem;
+	font-size: 1rem;
+	background: $color-borders;
+	color: $color-text;
+	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   }
 
   .time {
-    display: block;
-    font-size: $text-small;
-    margin: .25rem .5rem 1rem;
+	display: block;
+	font-size: $text-small;
+	margin: .25rem .5rem 1rem;
   }
 
   p {
-    margin: .5rem;
+	margin: .5rem;
   }
 }
 
@@ -339,14 +345,14 @@ option {
    ---------------------------------*/
 @include respond-below(md) {
   :root {
-    font-size: 14px;
+	font-size: 14px;
   }
 
   #menu {
-    grid-row: 1 / 4;
+	grid-row: 1 / 4;
   }
 
   #planet_summary {
-    grid-column: 2 / 3;
+	grid-column: 2 / 3;
   }
 }
