--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,7 @@
 @import "components/alliance_defence";
 @import "components/alliance_page_ship_overview";
 @import "components/alliance_attacks";
+@import "components/alliance_members";
 @import "components/history";
 @import "components/page_journal";
 @import "components/news";
