--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -13,192 +13,193 @@
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
   @include respond-below(sm) {
-    grid-row: 1/3;
-    grid-column: 2 / 2;
-    max-width: calc(100vw - 114px);
-    > * {
-      max-width: 50%;
-      float: left;
+	grid-row: 1/3;
+	grid-column: 2 / 2;
+	max-width: calc(100vw - 114px);
+	> * {
+	  max-width: 50%;
+	  float: left;
 
-      &#header_planet {
-        max-width: unset;
-        font-size: .6875rem !important;
-      }
-    }
+	  &#header_planet {
+		max-width: unset;
+		font-size: .6875rem !important;
+	  }
+	}
   }
 
   > div {
-    width: 50%;
-    padding: 0 .5rem;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 0 .5rem;
+	width: 50%;
+	padding: 0 .5rem;
+	display: flex;
+	justify-content: space-between;
+	margin: 0 0 .5rem;
   }
 
   #header_mail,
   #header_news {
-    background: black;
-    transition: ease all .3s;
+	background: black;
+	transition: ease all .3s;
 
-    &:hover {
-      background: $color-primary;
+	&:hover {
+	  background: $color-primary;
 
-      a {
-        color: black !important;
-      }
-    }
+	  a {
+		color: black !important;
+	  }
+	}
 
-    a {
-      flex-basis: 100%;
-      text-align: center;
-      font-size: $text-small;
-      text-transform: uppercase;
-      font-weight: bold;
-      padding: .5rem 0 !important;
-      color: $color-offwhite !important;
-      transition: ease all .5s;
-    }
+	a {
+	  flex-basis: 100%;
+	  text-align: center;
+	  font-size: $text-small;
+	  text-transform: uppercase;
+	  font-weight: bold;
+	  padding: .5rem 0 !important;
+	  color: $color-offwhite !important;
+	  transition: ease all .5s;
+	}
 
-    #mail_new {
-      background: $color-positive;
-      color: black !important;
+	#mail_new {
+	  background: $color-positive;
+	  color: black !important;
 
-      a {
-        color: black !important;
-      }
-    }
+	  a {
+		color: black !important;
+	  }
+	}
 
-    #news_new {
-      background: $color-neutral;
-      color: black !important;
+	#news_new {
+	  background: $color-neutral;
+	  color: black !important;
 
-      a {
-        color: black !important;
-      }
-    }
+	  a {
+		color: black !important;
+	  }
+	}
   }
 
   #header_mail {
-    padding: 0;
-    order: 1;
-    border: 1px solid transparent;
-    border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
-    border-image-slice: 1;
+	padding: 0;
+	order: 1;
+	border: 1px solid transparent;
+	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
+	border-image-slice: 1;
   }
 
   #header_news {
-    padding: 0;
-    order: 2;
-    border: 1px solid transparent;
-    border-image: linear-gradient(to right, rgba($color-primary, .5) 0%, transparent 100%);
-    border-image-slice: 1;
-    border-left: none;
+	padding: 0;
+	order: 2;
+	border: 1px solid transparent;
+	border-image: linear-gradient(to right, rgba($color-primary, .5) 0%, transparent 100%);
+	border-image-slice: 1;
+	border-left: none;
   }
 
 
   span {
-    flex-basis: 50%;
+	flex-basis: 50%;
   }
 
   .textlabel {
-    margin-left: 0;
+	margin-left: 0;
   }
 
   .textvalue {
-    font-weight: bold;
-    text-align: right;
-    padding-right: 0;
+	font-weight: bold;
+	text-align: right;
+	padding-right: 0;
   }
 
   #header_planet {
-    position: absolute;
-    top: .65rem;
-    left: 0;
-    font-size: 1.5rem;
-    flex-basis: 100%;
-    flex-shrink: 0;
-    color: $color-offwhite;
-	font-family: "VT323", monospace;
+	position: absolute;
+	top: .65rem;
+	left: 0;
+	font-size: 1.5rem;
+	flex-basis: 100%;
+	flex-shrink: 0;
+	color: $color-offwhite;
 	font-size: 1.4rem;
 	letter-spacing: 1px;
 
-    span {
-      flex-basis: 100%;
-    }
+	span {
+	  flex-basis: 100%;
+	}
 
-    .ter,
-    .cat,
-    .xan,
-    .zik,
-    .etd {
-      font-style: italic;
-    }
+	.ter,
+	.cat,
+	.xan,
+	.zik,
+	.etd {
+	  font-style: italic;
+	  font-size: 1rem;
+	  padding-right: 3px;
+	}
 
-    .ter {
-      padding-right: 3px;
-    }
-
-    .cat {
-      padding-right: 4px;
-    }
-
-    .xan {
-      padding-right: 5px;
-    }
-
-    .zik {
-      padding-right: 2px;
-    }
-
-    .etd {
-      padding-right: 2px;
-    }
+	//.ter {
+	//  padding-right: 3px;
+	//}
+	//
+	//.cat {
+	//  padding-right: 3px;
+	//}
+	//
+	//.xan {
+	//  padding-right: 3px;
+	//}
+	//
+	//.zik {
+	//  padding-right: 3px;
+	//}
+	//
+	//.etd {
+	//  padding-right: 2px;
+	//}
   }
 
 
   #header_metal {
-    order: 5;
+	order: 5;
   }
 
   #header_value {
-    order: 6;
+	order: 6;
   }
 
   #header_crystal {
-    order: 7;
+	order: 7;
   }
 
   #header_xp {
-    order: 8;
+	order: 8;
   }
 
   #header_eonium {
-    order: 9;
+	order: 9;
   }
 
   #header_score {
-    order: 10;
+	order: 10;
   }
 
   #header_asteroids {
-    order: 11;
+	order: 11;
   }
 
   #header_rank {
-    order: 12;
+	order: 12;
   }
 
   #header_tick {
-    width: 100%;
-    order: 3;
+	width: 100%;
+	order: 3;
 
-    span {
-      flex-basis: 25%;
-    }
+	span {
+	  flex-basis: 25%;
+	}
 
-    .textlabel {
-      margin-left: calc(50% + .5rem);
-    }
+	.textlabel {
+	  margin-left: calc(50% + .5rem);
+	}
   }
 
 }
@@ -243,30 +244,30 @@
   border-image-slice: 1;
   padding: 0;
   @include respond-below(sm) {
-    grid-row: 2/3;
-    grid-column: 2 / 2;
-    max-width: calc(100vw - 114px);
+	grid-row: 2/3;
+	grid-column: 2 / 2;
+	max-width: calc(100vw - 114px);
   }
 
   &:before {
-    display: block;
-    content: 'Planetary Development ';
-    width: calc(100% - 1rem);
-    padding: .5rem .5rem .6125rem;
-    font-size: $text-small;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-    color: $color-offwhite;
-    background: black;
-    border-bottom: 1px solid transparent;
-    border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
-    border-image-slice: 1;
+	display: block;
+	content: 'Planetary Development ';
+	width: calc(100% - 1rem);
+	padding: .5rem .5rem .6125rem;
+	font-size: $text-small;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-align: center;
+	color: $color-offwhite;
+	background: black;
+	border-bottom: 1px solid transparent;
+	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+	border-image-slice: 1;
   }
 
   .textlabel {
-    padding: 0 .5rem;
-    flex-basis: 8rem;
+	padding: 0 .5rem;
+	flex-basis: 8rem;
   }
 }
 
@@ -293,10 +294,10 @@
   width: 100%;
   font-size: $text-small;
   @include respond-below(sm) {
-    margin: 0;
-    padding: 0 .25rem 0 0;
-    text-align: right;
-    flex: 1;
+	margin: 0;
+	padding: 0 .25rem 0 0;
+	text-align: right;
+	flex: 1;
   }
 }
 
