--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -38,6 +38,10 @@
           span {
             color: $color-offwhite;
 
+			&.bashlimit {
+			  color: $color-neutral;
+			}
+
             &.gc {
               color: $color-gc;
             }
