--- a/scss/components/_alliance_attacks.scss
+++ b/scss/components/_alliance_attacks.scss
@@ -12,7 +12,7 @@
 
           &:first-child th {
             font-weight: bold;
-            background: $color-borders;
+			background: $color-bg-th;
             color: $color-text;
             font-size: .75rem;
             padding: .5rem .25rem;
