--- a/scss/components/_alliance_members.scss
+++ b/scss/components/_alliance_members.scss
@@ -4,7 +4,7 @@
 	tr {
 	  &:first-child th {
 		font-weight: bold;
-		background: $color-borders;
+		background: $color-bg-th;
 		color: $color-text;
 	  }
 
