--- a/scss/components/_mining.scss
+++ b/scss/components/_mining.scss
@@ -88,7 +88,7 @@
           th {
             text-transform: initial;
             font-size: 1rem;
-            padding-bottom: 1rem;
+            padding-bottom: .3rem;
           }
         }
       }
