--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -15,7 +15,7 @@
             &:first-child {
               th {
                 padding: .5rem .125rem;
-                background: $color-background;
+				background: $color-bg-th;
                 text-align: center;
               }
             }
