--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -32,6 +32,7 @@ $color-borders: #24303f;
 $color-links: $color-primary;
 $color-links-hover: $color-black;
 $color-text: $color-offwhite;
+$color-bg-th: rgba(black, .1);
 //
 $color-own: rgb(0, 130, 255);
 $color-positive: limegreen;
