--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -56,12 +56,15 @@
 .header,
 h2 {
   margin: 1rem 0;
-  padding: .5rem 0;
+  //padding: .5rem 0;
+  font-size: 1rem;
+  //letter-spacing: 1px;
+  padding: 10px;
   font-weight: bold;
   text-transform: uppercase;
   color: $color-offwhite;
   background: $color-borders;
-  background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
+  background: linear-gradient(to right, $color-borders 0%, $color-background 50%, $color-borders 100%) !important;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
   border-image-slice: 1;
@@ -228,19 +231,20 @@ span.center {
 	  color: lighten($color-borders, 70%);
 	}
   }
-}
 
-.tab_link {
-  padding: .25rem .5rem;
+  .tab_link {
+	padding: .25rem .5rem;
+	//border-bottom: 1px solid transparent;
+	transition: ease all .5s;
 
-  &:hover {
-	color: $color-black;
-	background: $color-primary;
-	//background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-	text-decoration: none;
+	&:hover {
+	  color: $color-black;
+	  background: $color-primary;
+	  text-decoration: none;
+	  //border-bottom: 1px solid rgba($color-primary, .5);
+	}
   }
 }
-
 .error {
   color: $color-neutral;
   font-weight: normal;
