--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -12,7 +12,7 @@
 
       .ally_def_incs_wrapper {
         margin: 0 0 2rem 5px;
-        background: $color-borders;
+        background: $color-secondary;
 
         .ally_def_target {
           font-size: 1rem;
