--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -48,7 +48,7 @@ ul.alliance_attack_claims_list a {
   &:hover {
     text-decoration: none !important;
     color: $color-primary !important;
-    background: $color-borders !important;
+    background: $color-secondary !important;
     //background: linear-gradient(180deg, $color-black-light 0%, $color-black-medium 15%, $color-black-dark 100%);
   }
 }
