--- a/scss/components/_foreign_affairs.scss
+++ b/scss/components/_foreign_affairs.scss
@@ -16,7 +16,7 @@
 
     .maintext > p {
       font-weight: bold;
-      background: $color-borders;
+      background: $color-secondary;
       //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
       margin-bottom: 1rem;
 
