--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -8,7 +8,7 @@
 
   .tablesort {
     thead {
-      background: $color-borders;
+      background: $color-secondary;
 
       th {
         padding: 10px 4px;
