--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -38,7 +38,7 @@
     td {
       padding-left: 0;
       font-size: $text-small;
-      background: $color-borders;
+      background: $color-secondary;
 
       &:nth-child(1) {
         padding-left: .5rem;
