--- a/scss/components/_covert_ops.scss
+++ b/scss/components/_covert_ops.scss
@@ -54,7 +54,7 @@
     display: block;
     padding: .25rem .5rem;
     margin-bottom: .5rem;
-    background: $color-borders;
+    background: $color-secondary;
     //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
     font-size: 1rem;
   }
