--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -9,7 +9,7 @@ textarea,
 select,
 .checkbox {
   font-family: "Ubuntu", "Lato", "Open Sans", sans-serif;
-  background-color: $color-borders;
+  background-color: $color-secondary;
   border: 1px solid rgba($color-primary, .5);
   color: $color_text;
   font-size: 1rem;
@@ -28,7 +28,7 @@ input[type="radio"] {
 
 option {
   font-family: "Ubuntu", "Lato", "Open Sans", sans-serif;
-  background-color: $color-borders;
+  background-color: $color-secondary;
   color: $color-text;
 }
 
@@ -38,7 +38,7 @@ input[type="email"],
 input[type="password"] {
   padding: .25rem !important;
   color: $color_text;
-  background-color: $color-borders;
+  background-color: $color-secondary;
 }
 
 
@@ -51,7 +51,7 @@ input[type="checkbox"] {
   appearance: none;
   width: 1rem;
   height: 1rem;
-  background-color: $color-borders;
+  background-color: $color-secondary;
   cursor: pointer;
   outline: none;
   transition: .3s;
@@ -69,7 +69,7 @@ input[type="checkbox"] {
 
 input[type="checkbox"],
 select {
-  background-color: $color-borders !important;
+  background-color: $color-secondary !important;
   color: $color_text !important;
 }
 
