--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,40 +1,3 @@
-/* Name:       Planetarion Modern - Light
-   Version:    .5b
-   Date:       05-01-2020
-   Author:     Leshy
-
-
-   Default colors and values
-   -------------------------
-   Customise these values to create alternative colour
-   schemes. The colour value below the variables sets the
-   text color on alternate buttons as used for the news
-   indicator and the battle calc. Adjust this if a light
-   background colour is chosen for these buttons.
-   -------------------------------------------------------*/
-:root {
-  font-size: .9rem;
-  --col-text-main: #111111;
-  --col-text-highlight: #fefefe;
-  --col-accent-light: #75b44a;
-  --col-accent-dark: #2ba87e;
-  --col-header-light: #4d5154;
-  --col-header-medium: #384147;
-  --col-header-dark: #010304;
-  --col-panel-light: #f1f1f1;
-  --col-panel-dark: #e1e1e1;
-  --col-background: #fefefe;
-  --col-alert-light: #f49915;
-  --col-alert-dark: #c93716;
-  --col-terran: #a18181;
-  --col-cathaar: #4d88bc;
-  --col-xandathrii: #2ba87e;
-  --col-zikonian: #c93716;
-  --col-eitraides: #111111;
-  --txt-small: .8rem;
-}
-
-
 /* Remove most template background images
    -------------------------------------------------------*/
 body, .pages, #top, #logo, #tnav, #bar_manual, #bar_support, #bar_portal, #bar_forums, #bar_logout, #bar_login, #bar_signup, #menu_top, .menu_grp, #menu_overview, #menu_preferences, #menu_logout, #menu_bottom, #header, #header_planet, #header_mail, #header_news, #header_tick, #header_metal, #header_crystal, #header_eonium, #header_asteroids, #header_value, #header_xp, #header_score, #header_rank, #planet_summary_construction, #planet_summary_research, #planet_summary_production, #planet_summary_footer, #contents_header, #contents_information, .container, #contents_footer, #tab_links, #footer, #important_messages_contents_header, #important_messages_contents_footer, #page_manual .entries, #page_manual .entry_sep, #entry_search {
@@ -72,6 +35,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-size: $text-default;
 }
 
 body,
@@ -106,7 +70,7 @@ th {
 
 
 option {
-  background-color: $color-borders !important;
+  background-color: $color-secondary !important;
   color: $color-text !important;
 }
 
@@ -141,7 +105,7 @@ option {
    ---------------------------------*/
 #important_messages_contents {
   width: 80%;
-  background: $color-borders !important;
+  background: $color-secondary !important;
   border: 0;
   color: $color-text;
   padding: .25rem .5rem;
@@ -320,7 +284,7 @@ option {
 	display: block;
 	padding: .5rem;
 	font-size: 1rem;
-	background: $color-borders;
+	background: $color-secondary;
 	color: $color-text;
 	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   }
