--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -42,7 +42,7 @@
 
           th,
           td {
-            background: $color-borders;
+            background: $color-secondary;
           }
 
           > td {
@@ -54,7 +54,7 @@
           &:nth-child(even) {
             th,
             td {
-              background: darken($color-borders, 2%);
+              background: $color-secondary-alt;
             }
           }
 
@@ -113,7 +113,7 @@
     table {
       tr {
         &:nth-child(even) {
-          background: darken($color-borders, 3%);
+          background: $color-secondary-alt;
         }
       }
     }
