--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -39,7 +39,7 @@
 
           &:nth-child(2) {
             padding: .15rem 0;
-            background: $color-borders;
+            background: $color-secondary;
             //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
           }
         }
@@ -69,7 +69,7 @@
         &:nth-child(2n+2) {
           td {
             padding: .5rem;
-            background: $color-borders;
+            background: $color-secondary;
             //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
           }
         }
