--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -12,7 +12,7 @@
   display: block;
   padding: .25rem .5rem;
   margin-bottom: .5rem;
-  background: $color-borders;
+  background: $color-secondary;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   font-size: 1.3rem;
   text-shadow: 1px 1px 0px #000000;
@@ -309,7 +309,7 @@
 
 .research_branch_list {
   padding: .25rem .5rem;
-  background: $color-borders;
+  background: $color-secondary;
   border: 0;
   margin: .25rem auto;
   text-align: center;
