--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,14 @@
+/*!
+* This skin addon is designed to run with the r32 skin selected in PA preferences.
+*
+* If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development.
+* Made with love, for my fellow nerds.
+* Ultimate <3
+*
+* For any questions / bug reports / assistance, contact @UltimateNewbie on TG.
+*
+*/
+
 // lets define here all the separated SCSS files to compile into one..
 // fingers crossed they'll all get useful naming conventions to help with organisation!
 //
