--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,10 +2,13 @@
 * This skin addon is designed to run with the r32 skin selected in PA preferences.
 *
 * If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development.
-* Made with love, for my fellow nerds.
+* Made with love, for my fellow spreadsheet warriors.
 * Ultimate <3
 *
 * For any questions / bug reports / assistance, contact @UltimateNewbie on TG.
+*
+*
+*
 *
 */
 
@@ -23,6 +26,7 @@
 @import "components/planet_details";
 @import "components/page_content";
 @import "components/overview";
+@import "components/messages";
 @import "components/galaxy_forum";
 @import "components/galaxy_status";
 @import "components/mining";
