--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -81,7 +81,7 @@ h2 {
 
 
 #notice {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .6) 50%, rgba(0, 0, 0, 0) 100%);
   padding: .5rem;
   margin-top: .5rem;
   border: 1px solid transparent;
