--- a/scss/components/_messages.scss
+++ b/scss/components/_messages.scss
@@ -5,6 +5,11 @@
 	  table {
 		tr {
 		  background: $color-secondary-alt;
+		  transition: ease all .5s;
+
+		  &:hover {
+			background-color: rgba($color-primary, .5);
+		  }
 
 		  &:first-child {
 			background: transparent;
@@ -12,6 +17,10 @@
 
 		  &:nth-child(4n) {
 			background: $color-secondary;
+
+			&:hover {
+			  background-color: rgba($color-primary, .5);
+			}
 		  }
 
 		  &:nth-child(2n - 1) {
