--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -2,85 +2,91 @@
    -------------------------------------------------------*/
 #page_production {
   #notice {
-    + .container {
-      .header {
-        display: none;
-      }
+	+ .container {
+	  .header {
+		display: none;
+	  }
 
-      table {
-        width: auto;
-        margin: 0 auto;
-      }
+	  table {
+		width: auto;
+		margin: 0 auto;
+	  }
 
-      td {
-        font-weight: bold;
-      }
+	  td {
+		font-weight: bold;
+	  }
 
-      a {
-        display: inline-block;
-        padding: .25rem 1rem;
+	  a {
+		display: inline-block;
+		padding: .25rem 1rem;
 
-        &:hover {
-          color: black;
-          background: $color-primary;
-          //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-          text-decoration: none;
-        }
-      }
-    }
+		&:hover {
+		  color: black;
+		  background: $color-primary;
+		  //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+		  text-decoration: none;
+		}
+	  }
+	}
   }
 }
 
 
 #production_form {
   tr {
-    th,
-    td {
-      padding-left: 0;
-      font-size: $text-small;
-      background: $color-secondary;
+	th,
+	td {
+	  padding-left: 0;
+	  font-size: $text-small;
+	  background: $color-secondary;
 
-      &:nth-child(1) {
-        padding-left: .5rem;
-      }
+	  &:nth-child(1) {
+		padding-left: .5rem;
+	  }
 
-      &:nth-child(3),
-      &:nth-child(4),
-      &:nth-child(5) {
-        width: 2rem;
-        text-align: center;
-      }
+	  &:nth-child(3),
+	  &:nth-child(4),
+	  &:nth-child(5) {
+		width: 2rem;
+		text-align: center;
+	  }
 
-      &:nth-child(6),
-      &:nth-child(8) {
-        text-align: center;
-      }
+	  &:nth-child(6),
+	  &:nth-child(8) {
+		text-align: center;
+	  }
 
-      &:nth-child(9) {
-        text-align: right;
-      }
-    }
+	  &:nth-child(9) {
+		text-align: right;
+	  }
+	}
 
-    th {
+	th {
 	  background: $color-bg-th;
-    }
+	}
 
-    td {
-      &:nth-child(1) {
-        font-size: 1rem;
-      }
+	td {
+	  &:nth-child(1) {
+		font-size: 1rem;
+	  }
 
-      &:nth-child(9),
-      &:nth-child(11) {
-        font-size: 1rem;
-      }
+	  &:nth-child(9),
+	  &:nth-child(11) {
+		font-size: 1rem;
+	  }
 
-      &.notice_warning {
-        color: rgba($color-negative, .9);
-        font-size: .75rem;
-        background: transparent;
-      }
-    }
+	  &.notice_warning {
+		color: rgba($color-negative, .9);
+		font-size: .75rem;
+		background: transparent;
+	  }
+	}
+
+	&:nth-child(even) {
+	  td {
+		background: $color-secondary-alt;
+	  }
+	}
   }
 }
 
@@ -97,51 +103,51 @@ span.small.notice_warning {
 
 #production_factories_row {
   td {
-    font-size: $text-small !important;
+	font-size: $text-small !important;
 
-    .textlabel {
-      font-size: $text-small;
-      font-weight: bold;
-      padding-bottom: .5rem;
-    }
+	.textlabel {
+	  font-size: $text-small;
+	  font-weight: bold;
+	  padding-bottom: .5rem;
+	}
   }
 }
 
 #d_stats {
   table {
-    &:first-child {
-      tr {
-        &:first-child th {
-          border-bottom: 1px solid $color-offwhite;
-          padding-bottom: .25rem;
-        }
+	&:first-child {
+	  tr {
+		&:first-child th {
+		  border-bottom: 1px solid $color-offwhite;
+		  padding-bottom: .25rem;
+		}
 
-        &:nth-child(2) {
-          th,
-          td {
-            padding-top: .25rem;
-          }
-        }
+		&:nth-child(2) {
+		  th,
+		  td {
+			padding-top: .25rem;
+		  }
+		}
 
-        &:nth-child(6) th {
-          padding-top: .5rem;
-        }
-      }
+		&:nth-child(6) th {
+		  padding-top: .5rem;
+		}
+	  }
 
-      th,
-      td {
-        color: $color-offwhite;
-        font-size: $text-small;
-      }
-    }
+	  th,
+	  td {
+		color: $color-offwhite;
+		font-size: $text-small;
+	  }
+	}
 
-    & + table {
-      margin-top: .5rem;
+	& + table {
+	  margin-top: .5rem;
 
-      th:first-child {
-        width: 45%;
-      }
-    }
+	  th:first-child {
+		width: 45%;
+	  }
+	}
   }
 }
 
