--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -86,6 +86,10 @@
 	  td {
 		background: $color-secondary-alt;
 	  }
+	}&:last-child {
+	  td {
+		background: rgba(0,0,0,0.12);
+	  }
 	}
   }
 }
@@ -104,6 +108,7 @@ span.small.notice_warning {
 #production_factories_row {
   td {
 	font-size: $text-small !important;
+	background: transparent;
 
 	.textlabel {
 	  font-size: $text-small;
