--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -6,86 +6,90 @@
 
 #quest_system {
   table {
-    margin: 0 auto;
-    width: 80%;
+	margin: 0 auto;
+	width: 80%;
 
-    th {
-      &:nth-child(1) {
-        width: 0 !important;
-      }
+	th {
+	  &:nth-child(1) {
+		width: 0 !important;
+	  }
 
-      &:nth-child(2) {
-        width: auto !important;
-      }
+	  &:nth-child(2) {
+		width: auto !important;
+	  }
 
-      &:nth-child(3) {
-        width: 100px !important;
-      }
+	  &:nth-child(3) {
+		width: 100px !important;
+	  }
 
-      &:nth-child(4) {
-        width: 1rem !important;
-      }
+	  &:nth-child(4) {
+		width: 1rem !important;
+	  }
 
-      &:nth-child(5) {
-        width: 0 !important;
-      }
-    }
+	  &:nth-child(5) {
+		width: 0 !important;
+	  }
+	}
 
-    tr {
-      &:not(:first-child) {
-        th {
-          text-transform: initial;
-          font-size: 1rem;
+	tr {
+	  &:not(:first-child) {
+		th {
+		  text-transform: initial;
+		  font-size: 1rem;
 
-          &:nth-child(2) {
-            padding: .15rem 0;
-            background: $color-secondary;
-            //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
-          }
-        }
+		  &:nth-child(2) {
+			padding: .15rem 0;
+			background: $color-secondary;
+			//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+		  }
+		}
 
-      }
+	  }
 
-      &[id^='quest'] p {
-        font-size: $text-small;
-        margin: 0 1.1rem;
-        color: white;
-      }
-    }
+	  &[id^='quest'] p {
+		font-size: $text-small;
+		margin: 0 1.1rem;
+		color: white;
+	  }
+	}
 
-    table {
-      width: calc(100% - 2.4rem);
-      margin-left: 1rem;
+	table {
+	  width: calc(100% - 2.4rem);
+	  margin-left: 1rem;
 
-      td {
-        &:nth-child(1) {
-          width: auto !important;
-        }
+	  td {
+		&:nth-child(1) {
+		  width: auto !important;
+		}
 
-        &:nth-child(2) {
-          width: 100px !important;
-        }
+		&:nth-child(2) {
+		  width: 100px !important;
+		}
 
-        &:nth-child(2n+2) {
-          td {
-            padding: .5rem;
-            background: $color-secondary;
-            //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
-          }
-        }
-      }
-    }
+		&:nth-child(3) {
+		  width: 162px;
+		}
+
+		&:nth-child(2n+2) {
+		  td {
+			padding: .5rem;
+			background: $color-secondary;
+			//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+		  }
+		}
+	  }
+	}
   }
 
   .completed {
-    width: 100%;
-    background: none;
+	width: 100%;
+	background: none;
 
-    &:after {
-      content: '\2714';
-      font-weight: bold;
-      color: $color-primary;
-    }
+	&:after {
+	  content: '\2714';
+	  font-weight: bold;
+	  color: $color-primary;
+	}
   }
 }
 
@@ -96,15 +100,15 @@
   background: none;
 
   &:before {
-    content: '\25BC';
-    color: $color-primary;
-    display: inline;
+	content: '\25BC';
+	color: $color-primary;
+	display: inline;
   }
 
   &:hover {
-    &:before {
-      color: $color-text;
-    }
+	&:before {
+	  color: $color-text;
+	}
   }
 }
 
@@ -147,22 +151,22 @@
   font-size: $text-small;
 
   a {
-    position: absolute;
-    top: .45rem;
-    right: .25rem;
-    text-transform: uppercase;
+	position: absolute;
+	top: .45rem;
+	right: .25rem;
+	text-transform: uppercase;
 
-    &:hover {
-      color: $color-primary-dark;
-    }
+	&:hover {
+	  color: $color-primary-dark;
+	}
   }
 }
 
 .info_contents {
   p {
-    min-width: 15rem;
-    font-size: $text-small;
-    color: $color-offwhite;
+	min-width: 15rem;
+	font-size: $text-small;
+	color: $color-offwhite;
   }
 }
 
@@ -171,8 +175,8 @@ span {
   &.mission_defend,
   &.mission_return,
   &.mission_fake_defend {
-    background: transparent;
-    opacity: 1;
+	background: transparent;
+	opacity: 1;
   }
 }
 
@@ -181,7 +185,7 @@ span {
   background: rgba($color-negative, .14);
 
   .mission_attack {
-    background: transparent;
+	background: transparent;
   }
 }
 
@@ -190,7 +194,7 @@ span {
   background: rgba($color-neutral, .14);
 
   .mission_fake_defend {
-    background: transparent;
+	background: transparent;
   }
 }
 
@@ -199,7 +203,7 @@ span {
   color: #888888;
 
   .mission_return {
-    opacity: 1;
+	opacity: 1;
   }
 }
 
@@ -208,6 +212,6 @@ span {
   background: rgba($color-positive, .14);
 
   .mission_defend {
-    background: transparent;
+	background: transparent;
   }
 }
