--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -42,7 +42,9 @@
 @import "components/alliance_defence";
 @import "components/alliance_page_ship_overview";
 @import "components/alliance_attacks";
+@import "components/alliance_applicants";
 @import "components/alliance_members";
+@import "components/alliance_access";
 @import "components/alliance_scans";
 @import "components/history";
 @import "components/page_journal";
